# slowbpe

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: tinyshakespeare.cpp
cmake/: asan.cmake  benchmarks.cmake  debug.cmake  deps.cmake  main.cmake  release.cmake  tests.cmake
run/: build.sh  format.sh
slowbpe/: CMakeLists.txt  slowbpe.cpp  slowbpe.h  utils.cpp  utils.h
tests/: slowbpe.cpp  utils.cpp
tests/static/: test_string_0.txt  test_string_1.txt
